--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
 		"enable": false,
 		"ignoreCommand": []
 	},
-	"adminBot": [],
+	"adminBot": [61559205854187],
 	"whiteListMode": {
 		"enable": false,
 		"whiteListIds": [],
